[package]
name = "plegosa"
version = "0.4.0-alpha"
authors = ["SyoBoN <syobon@syobon.net>"]
edition = "2021"
description = "A simple Egosa (ego-search) tool for Pleroma"
repository = "https://github.com/syobocat/plegosa/"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.96"
colored = "3.0.0"
env_logger = "0.11.6"
fast_html2md = { version = "0.0.48", default-features = false, features = ["rewriter"] }
kanaria = "0.2.0"
log = "0.4.26"
megalodon = "1.0.0"
nanohtml2text = "0.2.1"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["charset", "macos-system-configuration", "http2", "json", "rustls-tls"] }
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
unicode-normalization = "0.1.24"
url = { version = "2.5.4", features = ["serde"] }

# Workaround for #11
[package.metadata.cross.target.x86_64-unknown-netbsd]
pre-build = [
    "mkdir -p /tmp/netbsd",
    "curl https://cdn.netbsd.org/pub/NetBSD/NetBSD-9.4/amd64/binary/sets/base.tar.xz -O",
    "tar -C /tmp/netbsd -xJf base.tar.xz",
    "cp /tmp/netbsd/usr/lib/libexecinfo.so /usr/local/x86_64-unknown-netbsd/lib",
    "rm base.tar.xz",
    "rm -rf /tmp/netbsd",
]
