# SPDX-FileCopyrightText: NONE
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "plegosa"
version = "0.4.2"
authors = ["SyoBoN <syobon@syobon.net>"]
edition = "2021"
description = "A simple Egosa (ego-search) tool for Pleroma"
repository = "https://github.com/syobocat/plegosa/"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.99"
colored = "3.0.0"
env_logger = "0.11.8"
fast_html2md = { version = "0.0.48", default-features = false, features = ["rewriter"] }
kanaria = "0.2.0"
log = "0.4.28"
megalodon = "1.0.3"
nanohtml2text = "0.2.1"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = ["charset", "http2", "json", "rustls-tls", "system-proxy"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.5"
unicode-normalization = "0.1.24"
url = { version = "2.5.7", features = ["serde"] }

# Workaround for #11
[package.metadata.cross.target.x86_64-unknown-netbsd]
pre-build = [
    "dir=$(mktemp -d)",
    "curl https://cdn.netbsd.org/pub/NetBSD/NetBSD-9.4/amd64/binary/sets/base.tar.xz -O",
    "tar -C ${dir} -xJf base.tar.xz",
    "cp ${dir}/usr/lib/libexecinfo.so /usr/local/x86_64-unknown-netbsd/lib",
    "rm base.tar.xz",
    "rm -rf ${dir}",
]
