# SPDX-FileCopyrightText: NONE
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "plegosa"
version = "0.4.5"
authors = ["SyoBoN <syobon@syobon.net>"]
edition = "2024"
description = "A simple Egosa (ego-search) tool for Pleroma"
repository = "https://github.com/syobocat/plegosa/"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.99"
colored = "3.0.0"
env_logger = "0.11.8"
fast_html2md = { version = "0.0.58", default-features = false, features = ["rewriter", "ignore_cookies"] }
kanaria = "0.2.0"
log = "0.4.28"
megalodon = "1.0.3"
nanohtml2text = "0.2.1"
regex = "1.11.2"
reqwest = { version = "0.13.1", features = ["json"] }
rustls = { version = "0.23.36", features = ["aws-lc-rs", "ring"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "1.0.3"
unicode-normalization = "0.1.24"
url = { version = "2.5.7", features = ["serde"] }

[features]
default = ["aws-lc-rs"]
aws-lc-rs = []
ring = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

# Workaround for #11, #38
[package.metadata.cross.target.x86_64-unknown-netbsd]
pre-build = [
    "dir=$(mktemp -d)",
    "curl https://cdn.netbsd.org/pub/NetBSD/NetBSD-10.1/amd64/binary/sets/base.tar.xz -O",
    "tar -C ${dir} -xJf base.tar.xz",
    "cp ${dir}/lib/libc.so /usr/local/x86_64-unknown-netbsd/lib",
    "cp ${dir}/usr/lib/libexecinfo.so /usr/local/x86_64-unknown-netbsd/lib",
    "rm base.tar.xz",
    "rm -rf ${dir}",
]
